--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+language: ruby
+install:
+  - gem uninstall bundler
+  - gem install bundler --version '1.7.4'
+script: "rake"
+
 deploy:
   provider: script
   script: bash DB_Clonner.sh
