--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 install:
-  - gem uninstall bundler
-  - gem install bundler --version '1.7.4'
+  - gem uninstall bundler -y
+  - gem install bundler --version '1.7.4' -y
 script: "rake"
 
 deploy:
